[package]
name = "rope_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boringtun = "0.4.0"
futures = "0.3.19"
tokio = { version = "1", features = ["rt", "net", "macros", "io-util", "sync", "parking_lot", "time"] }
parking_lot = "0.11.2"
rand = "0.8.4"
chrono = "0.4"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
packed_struct = "0.10"
ringbuf = "0.2"
bytes = "1"
arrayvec = "0.7"
average = "0.13"
itertools = "0.10"
url = "2.2"
async-trait = "0.1"

[dev-dependencies]
simple_logger = { version = "2.1", features = ["stderr"] }

[features]
default = ["transports_udp", "transports_inproc"]
transports = []
transports_udp = ["transports"]
transports_inproc = ["transports"]
